# greq

./: .env  .gitignore  CMakeLists.txt  CODE_SIGNING.md  Cargo.toml  LICENSE  README.md  install.sh  long_test.txt  test_chunks.txt  uninstall.sh
.github/workflows/: release.yml
src/: bm25.rs  config.rs  embeddings.rs  file_walker.rs  lib.rs  main.rs  parser.rs  search.rs  tokenizer.rs
tests/: integration_tests.rs
tests/data/: karate.txt
