[package]
name = "greq"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to search files using BM25 ranking - like grep but with linguistic analysis"
license = "MIT"
repository = "https://github.com/yourusername/greq"

[[bin]]
name = "greq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
regex = "1.10"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1.1"
fastembed = "5.13.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
